# caribon

./: .gitignore  Cargo.toml  ChangeLog.md  Makefile  README.md
examples/: example_readme.fr.html  example_readme.html
src/: bench.rs  config.rs  display.rs  error.rs  lib.rs  main.rs  parser.rs  tests.rs  word.rs
src/html/: start.html
src/lib/: bench.rs  display.rs  error.rs  lib.rs  parser.rs  word.rs
src/lib/html/: scripts.js
