[package]
name = "caribon"
version = "0.5.2"
authors = ["Elisabeth Henry <liz.henry@ouvaton.org>"]
readme = "README.md"
documentation = "http://lady-segfault.github.io/caribon/"
license = "GPL-2.0+"
homepage = "https://github.com/lady-segfault/caribon"
repository = "https://github.com/lady-segfault/caribon"
description = "A repetition detector program and library"

[lib]
name = "caribon"
path = "src/lib.rs"

[[bin]]
name = "caribon"
doc = false


[dependencies]
stemmer = "*"

[dependencies.edit-distance]
git = "https://github.com/lady-segfault/edit-distance.git"

