[package]
name = "caribon"
version = "0.7.2-unreleased"
authors = ["Elisabeth Henry <liz.henry@ouvaton.org>"]
readme = "README.md"
documentation = "http://lise-henry.github.io/rust/caribon/"
license = "LGPL-2.1+"
homepage = "https://github.com/lise-henry/caribon"
repository = "https://github.com/lise-henry/caribon"
description = "A repetition detector program and library"

[lib]
name = "caribon"
path = "src/lib/lib.rs"

[[bin]]
name = "caribon"
path = "src/bin/main.rs"
doc = false

[dependencies]
stemmer = "0.3"
edit-distance = "1"
