[package]
name = "caribon"
version = "0.8.0"
authors = ["Elisabeth Henry <liz.henry@ouvaton.org>"]
readme = "README.md"
license = "LGPL-2.1+"
documentation = "https://docs.rs/caribon/"
repository = "https://github.com/lise-henry/caribon"
description = "A repetition detector program and library"

[lib]
name = "caribon"
path = "src/lib/lib.rs"

[[bin]]
name = "caribon"
path = "src/bin/main.rs"
doc = false

[dependencies]
stemmer = "0.3"
strsim = "0.5"
